cmake_minimum_required(VERSION 3.10)
project(MARS_CI)
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif ()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

set(CMAKE_CXX_STANDARD 14)
add_executable(MARS_CI main.cpp InputLoader.h Annealing.cpp Annealing.h BigFloat.h OutputWriter.h OutputWriter.cpp)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(MARS_CI Threads::Threads)
